--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,12 +32,14 @@ jobs:
     - name: Run Atelier-PMD
       run: java -cp target/atelier-pmd-jar-with-dependencies.jar nl.utwente.atelierpmd.LocalRunner ./Submissions/s0001_Alice_Penguin/MarchPenguin
     
+    - uses: jwgmeligmeyling/pmd-github-action@master
     - name: Annotate
       uses: yuzutech/annotations-action@v0.4.0
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        title: 'lint'
-        input: './output.json'
+         path: '**/output.xml'
+         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+         title: 'lint'
+         input: '**/output.json'
 
        
 
