--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run terminal command
         run: |
           cd processing
+          cd processing-3.5.4
           ls
 
 
